fix(design): hide overflow of gauges in firefox

--- a/src/main/webapp/css/gamePage.css
+++ b/src/main/webapp/css/gamePage.css
@@ -207,6 +207,7 @@ rect, path {
     height: 100%;
     background: url(/img/backgrounds/jauge.png);
     background-size: 100% 100%;
+    overflow-y: hidden;
 }
 
 
